cockroachlabs-preview-main/docs/v23.2/monitor-and-debug-changefeeds.mdx
---
title: "Monitor and Debug Changefeeds"
old_description: "Monitor a changefeed from the DB Console and use logs for debugging."
---

import { InlineImage } from "/snippets/InlineImage.jsx";

<Note>
Monitoring is only available for [Enterprise changefeeds](/docs/v23.2/change-data-capture-overview#stream-row-level-changes-with-changefeeds).
</Note>

Changefeeds work as jobs in CockroachDB, which allows for [monitoring](#monitor-a-changefeed) and [debugging](#debug-a-changefeed) through the [DB Console](/docs/v23.2/ui-overview) [**Jobs**](/docs/v23.2/ui-jobs-page) page and [`SHOW JOBS`](/docs/v23.2/show-jobs) SQL statements using the job ID.

By default, changefeeds treat errors as retryable except for some specific terminal errors that are non-retryable.

- **retryable**: The changefeed will automatically retry whatever caused the error. (You may need to intervene so that the changefeed can resume.)
- **non-retryable**: The changefeed has encountered a terminal error and fails.

The following define the categories of non-retryable errors:

- When the changefeed cannot verify the target table's schema. For example, the table is offline or there are types within the table that the changefeed cannot handle.
- The changefeed cannot convert the data to the specified [output format](/docs/v23.2/changefeed-messages). For example, there are [Avro](/docs/v23.2/changefeed-messages#avro) types that changefeeds do not support, or a [CDC query](/docs/v23.2/cdc-queries) is using an unsupported or malformed expression.
- The terminal error happens as part of established changefeed behavior. For example, you have specified the [`schema_change_policy=stop` option](/docs/v23.2/create-changefeed#schema-policy) and a schema change happens.

We recommend monitoring changefeeds with [Prometheus](/docs/v23.2/monitoring-and-alerting#prometheus-endpoint) to avoid accumulation of garbage after a changefeed encounters an error. See [Garbage collection and changefeeds](/docs/v23.2/protect-changefeed-data) for more detail on how changefeeds interact with [protected timestamps](/docs/v23.2/architecture/storage-layer#protected-timestamps) and garbage collection. In addition, see the [Recommended changefeed metrics to track](#recommended-changefeed-metrics-to-track) section for the essential metrics to track on a changefeed.

## Monitor a changefeed

Changefeed progress is exposed as a high-water timestamp that advances as the changefeed progresses. This is a guarantee that all changes before or at the timestamp have been emitted. You can monitor a changefeed:

- On the [**Changefeeds** dashboard](/docs/v23.2/ui-cdc-dashboard) of the DB Console.
- On the [**Jobs** page](/docs/v23.2/ui-jobs-page) of the DB Console. Hover over the high-water timestamp to view the [system time](/docs/v23.2/as-of-system-time).
- Using `SHOW CHANGEFEED JOB <job_id>`:

    ```sql
    SHOW CHANGEFEED JOB 383870400694353921;
    ```

    ```text
            job_id       |  job_type  |                              description                              | ... |      high_water_timestamp      | ... |
    +--------------------+------------+-----------------------------------------------------------------------+ ... +--------------------------------+ ... +
      383870400694353921 | CHANGEFEED | CREATE CHANGEFEED FOR TABLE office_dogs INTO 'kafka://localhost:9092' | ... | 1537279405671006870.0000000000 | ... |
    (1 row)
    ```
- Using Prometheus and Alertmanager to track and alert on changefeed metrics. See the [Monitor CockroachDB with Prometheus](/docs/v23.2/monitor-cockroachdb-with-prometheus) tutorial for steps to set up Prometheus. See the [Recommended changefeed metrics to track](#recommended-changefeed-metrics-to-track) section for the essential metrics to alert you when a changefeed encounters a retryable error, or enters a failed state.

<Note>
You can use the high-water timestamp to [start a new changefeed where another ended](/docs/v23.2/create-changefeed#start-a-new-changefeed-where-another-ended).
</Note>

### Recommended changefeed metrics to track

By default, changefeeds will retry errors with [some exceptions](#changefeed-retry-errors). We recommend setting up monitoring for the following metrics to track retryable errors to avoid an over-accumulation of garbage, and non-retryable errors to alert on changefeeds in a failed state:

- `changefeed.max_behind_nanos`: When a changefeed's high-water mark timestamp is at risk of falling behind the cluster's [garbage collection window](/docs/v23.2/configure-replication-zones#replication-zone-variables).
- `changefeed.error_retries`: The total number of retryable errors encountered by all changefeeds.
- `changefeed.failures`: The total number of changefeed jobs that have failed.

If you are running more than 10 changefeeds, we recommend monitoring the CPU usage on your cluster. You can use the [Overload Dashboard](/docs/v23.2/ui-overload-dashboard) in the DB Console to track the performance of your cluster relating to CPU usage. For recommendations around how many tables a changefeed should target, refer to [System resources and running changefeeds](/docs/v23.2/create-and-configure-changefeeds#system-resources-and-running-changefeeds).

#### Protected timestamp and garbage collection monitoring

[Protected timestamps](/docs/v23.2/architecture/storage-layer#protected-timestamps) will protect changefeed data from garbage collection in particular scenarios, but if a changefeed lags too far behind, the protected changes could cause data storage issues. Refer to [Protect Changefeed Data from Garbage Collection](/docs/v23.2/protect-changefeed-data) for detail on when changefeed data is protected from garbage collection.

You can monitor changefeed jobs for [protected timestamp](/docs/v23.2/architecture/storage-layer#protected-timestamps) usage. We recommend setting up monitoring for the following metrics:

- `jobs.changefeed.protected_age_sec`: Tracks the age of the oldest [protected timestamp](/docs/v23.2/architecture/storage-layer#protected-timestamps) record protected by changefeed jobs. We recommend monitoring if `protected_age_sec` is greater than [`gc.ttlseconds`](/docs/v23.2/configure-replication-zones#gc-ttlseconds). As `protected_age_sec` increases, garbage accumulation increases. [Garbage collection](/docs/v23.2/architecture/storage-layer#garbage-collection) will not progress on a table, database, or cluster if the protected timestamp record is present.
- `jobs.changefeed.currently_paused`: Tracks the number of changefeed jobs currently considered [paused](/docs/v23.2/pause-job). Since paused changefeed jobs can accumulate garbage, it is important to [monitor the number of paused changefeeds](/docs/v23.2/pause-job#monitoring-paused-jobs).
- `jobs.changefeed.expired_pts_records`: Tracks the number of expired [protected timestamp](/docs/v23.2/architecture/storage-layer#protected-timestamps) records owned by changefeed jobs. You can monitor this metric in conjunction with the [`gc_protect_expires_after` option](/docs/v23.2/create-changefeed#gc-protect-expire).
- `jobs.changefeed.protected_record_count`: Tracks the number of [protected timestamp](/docs/v23.2/architecture/storage-layer#protected-timestamps) records held by changefeed jobs.

#### Schema registry metrics

If you are running a changefeed with the [`confluent_schema_registry`](/docs/v23.2/create-changefeed#confluent-registry) option, set up monitoring for the following metrics:

- `changefeed.schema_registry.retry_count`: The number of retries encountered when sending requests to the schema registry. A non-zero value could indicate incorrect configuration of the schema registry or changefeed parameters.
- `changefeed.schema_registry.registrations`: The number of registration attempts with the schema registry.

### Using changefeed metrics labels

<Note>
**This feature is in [preview](/docs/v23.2/cockroachdb-feature-availability)** and subject to change. To share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc/en-us).
</Note>

<Note>
An Enterprise license is required to use metrics labels in changefeeds.
</Note>

To measure metrics per changefeed, you can define a "metrics label" for one or multiple changefeed(s). The changefeed(s) will increment each [changefeed metric](/docs/v23.2/monitor-and-debug-changefeeds#metrics). Metrics label information is sent with time-series metrics to `http://{host}:{http-port}/_status/vars`, viewable via the [Prometheus endpoint](/docs/v23.2/monitoring-and-alerting#prometheus-endpoint). An aggregated metric of all changefeeds is also measured.

It is necessary to consider the following when applying metrics labels to changefeeds:

- The `server.child_metrics.enabled` [cluster setting](/docs/v23.2/cluster-settings) must be set to `true` before using the `metrics_label` option. `server.child_metrics.enabled` is enabled by default in Standard and Basic.
- Metrics label information is sent to the `_status/vars` endpoint, but will **not** show up in [`debug.zip`](/docs/v23.2/cockroach-debug-zip) or the [DB Console](/docs/v23.2/ui-overview).
- Introducing labels to isolate a changefeed's metrics can increase cardinality significantly. There is a limit of 1024 unique labels in place to prevent cardinality explosion. That is, when labels are applied to high-cardinality data (data with a higher number of unique values), each changefeed with a label then results in more metrics data to multiply together, which will grow over time. This will have an impact on performance as the metric-series data per changefeed quickly populates against its label.
- The maximum length of a metrics label is 128 bytes.

To start a changefeed with a metrics label, set the following cluster setting to `true`:

```sql
SET CLUSTER SETTING server.child_metrics.enabled=true;
```

Create the changefeed, passing the `metrics_label` option with the label name as its value:

```sql
CREATE CHANGEFEED FOR TABLE movr.rides INTO 'kafka://host:port' WITH metrics_label=rides;
```

```sql
CREATE CHANGEFEED FOR TABLE movr.vehicles INTO 'kafka://host:port' WITH metrics_label=vehicles;
```

Multiple changefeeds can be added to a label:

```sql
CREATE CHANGEFEED FOR TABLE movr.vehicle_location_histories INTO 'kafka://host:port' WITH metrics_label=vehicles;
```

`http://{host}:{http-port}/_status/vars` shows the defined changefeed(s) by label and the aggregated metric for all changefeeds. This output also shows the `default` scope, which will include changefeeds started without a metrics label:

```text
changefeed_running 4
changefeed_running{scope="default"} 1
changefeed_running{scope="rides"} 1
changefeed_running{scope="vehicles"} 2
```

```text
changefeed_emitted_messages 4144
changefeed_emitted_messages{scope="default"} 0
changefeed_emitted_messages{scope="rides"} 2772
changefeed_emitted_messages{scope="vehicles"} 1372
```

```text
changefeed_emitted_bytes 781591
changefeed_emitted_bytes{scope="default"} 0
changefeed_emitted_bytes{scope="rides"} 598034
changefeed_emitted_bytes{scope="vehicles"} 183557
```

#### Metrics

<table><thead><tr><th>Metric</th><th>Description</th><th>Unit</th></tr></thead><tbody><tr><td><code>changefeed&#95;running</code></td><td>Number of currently running changefeeds, including sinkless changefeeds.</td><td>Changefeeds</td></tr><tr><td><code>emitted&#95;messages</code></td><td>Number of messages emitted, which increments when messages are flushed.</td><td>Messages</td></tr><tr><td><code>emitted&#95;bytes</code></td><td>Number of bytes emitted, which increments as messages are flushed.</td><td>Bytes</td></tr><tr><td><code>flushed&#95;bytes</code></td><td>Bytes emitted by all changefeeds. This may differ from <code>emitted&#95;bytes</code> when <a href="/docs/v23.2/create-changefeed#compression-opt"><code>compression</code></a> is enabled.</td><td>Bytes</td></tr><tr><td><code>changefeed&#95;flushes</code></td><td>Total number of flushes for a changefeed.</td><td>Flushes</td></tr><tr><td><InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v23.2:<code>aggregator&#95;progress</code></td><td>The earliest timestamp up to which any <a href="/docs/v23.2/how-does-an-enterprise-changefeed-work">aggregator</a> is guaranteed to have emitted all values for which it is responsible. <strong>Note:</strong> This metric may regress when a changefeed restarts due to a transient error. Consider tracking the <code>changefeed.checkpoint&#95;progress</code> metric, which will not regress.</td><td>Timestamp</td></tr><tr><td><InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v23.2:<code>checkpoint&#95;progress</code></td><td>The earliest timestamp of any changefeed's persisted checkpoint (values prior to this timestamp will never need to be re-emitted).</td><td>Timestamp</td></tr><tr><td><code>admit&#95;latency</code></td><td>Difference between the event's MVCC timestamp and the time the event is put into the memory buffer.</td><td>Nanoseconds</td></tr><tr><td><code>commit&#95;latency</code></td><td>Difference between the event's MVCC timestamp and the time it is acknowledged by the <a href="/docs/v23.2/changefeed-sinks">downstream sink</a>. If the sink is batching events, then the difference is between the oldest event and when the acknowledgment is recorded.</td><td>Nanoseconds</td></tr><tr><td><a></a><InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v23.2:<code>lagging&#95;ranges</code></td><td>Number of ranges which are behind in a changefeed. This is calculated based on the options:<br/><br/>- <a href="/docs/v23.2/create-changefeed#lagging-ranges-threshold"><code>lagging&#95;ranges&#95;threshold</code></a>, which is the amount of time that a range checkpoint needs to be in the past to be considered lagging.<br/><br/>- <a href="/docs/v23.2/create-changefeed#lagging-ranges-polling"><code>lagging&#95;ranges&#95;polling&#95;interval</code></a>, which is the frequency at which lagging ranges are polled and the metric is updated.<br/><br/><strong>Note:</strong> Ranges undergoing an <a href="/docs/v23.2/create-changefeed#initial-scan">initial scan</a> for longer than the <code>lagging&#95;ranges&#95;threshold</code> duration are considered to be lagging. Starting a changefeed with an initial scan on a large table will likely increment the metric for each range in the table. As ranges complete the initial scan, the number of ranges lagging behind will decrease.</td><td>Nanoseconds</td></tr><tr><td><code>backfill&#95;count</code></td><td>Number of changefeeds currently executing a backfill (<a href="/docs/v23.2/changefeed-messages#schema-changes">schema change</a> or initial scan).</td><td>Changefeeds</td></tr><tr><td><code>sink&#95;batch&#95;hist&#95;nanos</code></td><td>Time messages spend batched in the sink buffer before being flushed and acknowledged.</td><td>Nanoseconds</td></tr><tr><td><code>flush&#95;hist&#95;nanos</code></td><td>Time spent flushing messages across all changefeeds.</td><td>Nanoseconds</td></tr><tr><td><code>checkpoint&#95;hist&#95;nanos</code></td><td>Time spent checkpointing changefeed progress.</td><td>Nanoseconds</td></tr><tr><td><code>error&#95;retries</code></td><td>Total retryable errors encountered by changefeeds.</td><td>Errors</td></tr><tr><td><code>backfill&#95;pending&#95;ranges</code></td><td>Number of <a href="/docs/v23.2/architecture/overview#architecture-range">ranges</a> in an ongoing backfill that are yet to be fully emitted.</td><td>Ranges</td></tr><tr><td><code>message&#95;size&#95;hist</code></td><td>Distribution in the size of emitted messages.</td><td>Bytes</td></tr><tr><td><InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v23.2.13:<code>total&#95;ranges</code></td><td>Total number of ranges that are watched by <a href="/docs/v23.2/how-does-an-enterprise-changefeed-work">aggregator processors</a> participating in the changefeed job. <code>changefeed.total&#95;ranges</code> shares the same polling interval as the <a href="#lagging-ranges-metric"><code>changefeed.lagging&#95;ranges</code></a> metric, which is controlled by the <code>lagging&#95;ranges&#95;polling&#95;interval</code> option. For more details, refer to <a href="#lagging-ranges">Lagging ranges</a>.</td><td></td></tr></tbody></table>

### Monitoring and measuring changefeed latency

Changefeeds can encounter latency in events processing. This latency is the total time CockroachDB takes to:

- Commit writes to the database.
- Encode [changefeed messages](/docs/v23.2/changefeed-messages).
- Deliver the message to the [sink](/docs/v23.2/changefeed-sinks).

There are a couple of ways to measure if changefeeds are encountering latency or falling behind:

- [Event latency](#event-latency): Measure the difference between an event's MVCC timestamp and when it is put into the memory buffer or acknowledged at the sink.
- [Lagging ranges](#lagging-ranges): Track the number of [ranges](/docs/v23.2/architecture/overview#range) that are behind in a changefeed.

#### Event latency

To monitor for changefeeds encountering latency in how events are emitting, track the following metrics:

- `admit_latency`: The difference between the event's MVCC timestamp and the time the event is put into the memory buffer.
- `commit_latency`: The difference between the event's MVCC timestamp and the time it is acknowledged by the [downstream sink](/docs/v23.2/changefeed-sinks). If the sink is batching events, the difference is between the oldest event and when the acknowledgment is recorded.

<Note>
The `admit_latency` and `commit_latency` metrics do **not** update for backfills during [initial scans](/docs/v23.2/create-changefeed#initial-scan) or [backfills for schema changes](/docs/v23.2/changefeed-messages#schema-changes-with-column-backfill). This is because a full table scan may contain rows that were written far in the past, which would lead to inaccurate changefeed latency measurements if the events from these scans were included in `admit_latency` adn `commit_latency`.
</Note>

Both of these metrics support [metrics labels](#using-changefeed-metrics-labels). You can set the `metrics_label` option when starting a changefeed to differentiate metrics per changefeed.

We recommend using the p99 `commit_latency` aggregation for alerting and to set SLAs for your changefeeds. Refer to the [Changefeed Dashboard](/docs/v23.2/ui-cdc-dashboard) **Commit Latency** graph to track this metric in the [DB Console](/docs/v23.2/ui-overview).

If your changefeed is experiencing elevated latency, you can use these metrics to:

- Review `admit_latency` versus `commit_latency` to calculate the time events are moving from the memory buffer to the downstream sink.
- Compare the `commit_latency` P99, P90, P50 latency percentiles to investigate performance over time.

#### Lagging ranges

<InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v23.2: Use the `changefeed.lagging_ranges` metric to track the number of [ranges](/docs/v23.2/architecture/overview#architecture-range) that are behind in a changefeed. This is calculated based on the [changefeed options](/docs/v23.2/create-changefeed#options):

- `lagging_ranges_threshold` sets a duration from the present that determines the length of time a range is considered to be lagging behind, which will then track in the [`lagging_ranges`](/docs/v23.2/monitor-and-debug-changefeeds#lagging-ranges-metric) metric. Note that ranges undergoing an [initial scan](/docs/v23.2/create-changefeed#initial-scan) for longer than the threshold duration are considered to be lagging. Starting a changefeed with an initial scan on a large table will likely increment the metric for each range in the table. As ranges complete the initial scan, the number of ranges lagging behind will decrease.
    - **Default:** `3m`
- `lagging_ranges_polling_interval` sets the interval rate for when lagging ranges are checked and the `lagging_ranges` metric is updated. Polling adds latency to the `lagging_ranges` metric being updated. For example, if a range falls behind by 3 minutes, the metric may not update until an additional minute afterward.
    - **Default:** `1m`

<InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v23.2.13: Use the `changefeed.total_ranges` metric to monitor the number of ranges that are watched by [aggregator processors](/docs/v23.2/how-does-an-enterprise-changefeed-work) participating in the changefeed job. If you're experiencing lagging ranges, `changefeed.total_ranges` may indicate that the number of ranges watched by aggregator processors in the job is unbalanced. You may want to try [pausing](/docs/v23.2/pause-job) the changefeed and then [resuming](/docs/v23.2/resume-job) it, so that the changefeed replans the work in the cluster. `changefeed.total_ranges` shares the same polling interval as the `changefeed.lagging_ranges` metric, which is controlled by the `lagging_ranges_polling_interval` option.

<Tip>
You can use the [`metrics_label`](/docs/v23.2/monitor-and-debug-changefeeds#using-changefeed-metrics-labels) option to track the `lagging_ranges` and `total_ranges` metric per changefeed.
</Tip>

## Debug a changefeed

### Using logs

For Enterprise changefeeds, [use log information](/docs/v23.2/logging-overview) to debug connection issues (i.e., `kafka: client has run out of available brokers to talk to (Is your cluster reachable?)`). Debug by looking for lines in the logs with `[kafka-producer]` in them:

```text
I190312 18:56:53.535646 585 vendor/github.com/Shopify/sarama/client.go:123  [kafka-producer] Initializing new client
I190312 18:56:53.535714 585 vendor/github.com/Shopify/sarama/client.go:724  [kafka-producer] client/metadata fetching metadata for all topics from broker localhost:9092
I190312 18:56:53.536730 569 vendor/github.com/Shopify/sarama/broker.go:148  [kafka-producer] Connected to broker at localhost:9092 (unregistered)
I190312 18:56:53.537661 585 vendor/github.com/Shopify/sarama/client.go:500  [kafka-producer] client/brokers registered new broker #0 at 172.16.94.87:9092
I190312 18:56:53.537686 585 vendor/github.com/Shopify/sarama/client.go:170  [kafka-producer] Successfully initialized new client
```

### Using `SHOW CHANGEFEED JOBS`

For Enterprise changefeeds, use `SHOW CHANGEFEED JOBS` to check the status of your changefeed jobs:

```sql
SHOW CHANGEFEED JOBS;
```

```text
        job_id       |               description                                                                                                                                      | user_name | status  |         running_status                    |          created           |          started           | finished |          modified          |      high_water_timestamp      | error |   sink_uri                                                                            |                    full_table_names                     |        topics         | format
---------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------+---------+-------------------------------------------+----------------------------+----------------------------+----------+----------------------------+--------------------------------+-------+---------------------------------------------------------------------------------------+---------------------------------------------------------+-----------------------+---------
786667716931878913   | CREATE CHANGEFEED FOR TABLE movr.users INTO 's3://changefeed_bucket?AWS_ACCESS_KEY_ID={ACCESS KEY}L&AWS_SECRET_ACCESS_KEY=redacted' WITH resolved              | user_name | running | running: resolved=1660144018.670219356,0  | 2022-08-10 14:38:55.098861 | 2022-08-10 14:38:55.12946  | NULL     | 2022-08-10 15:07:31.886757 | 1660144048833832849.0000000000 |       | s3://changefeed_bucket?AWS_ACCESS_KEY_ID={ACCESS KEY}&AWS_SECRET_ACCESS_KEY=redacted  | {movr.public.users}                                     | NULL                  | json
685724608744325121   | CREATE CHANGEFEED FOR TABLE mytable INTO 'kafka://localhost:9092' WITH confluent_schema_registry = 'http://localhost:8081', format = 'avro', resolved, updated | root      | running | running: resolved=1629336943.183631090,0  | 2021-08-19 01:35:43.19592  | 2021-08-19 01:35:43.225445 | NULL     | 2021-08-19 01:35:43.252318 | 1629336943183631090.0000000000 |       | kafka://localhost:9092                                                                | {defaultdb.public.mytable}                              | mytable               | avro
```

For more information, see [`SHOW JOBS`](/docs/v23.2/show-jobs).

### Using the DB Console

On the [**Custom Chart** debug page](/docs/v23.2/ui-custom-chart-debug-page) of the DB Console:

1. To add a chart, click **Add Chart**.
2. Select `changefeed.error_retries` from the **Metric Name** dropdown menu.

    A graph of changefeed restarts due to retryable errors will display.

## See also

- [DB Console](/docs/v23.2/ui-overview)
- [Monitoring and Alerting](/docs/v23.2/monitoring-and-alerting)
- [`SHOW JOBS`](/docs/v23.2/show-jobs)
